--- a/src/components/css/navbar.module.css
+++ b/src/components/css/navbar.module.css
@@ -52,6 +52,14 @@ div.underline.selected
     width: fit-content;
 }
 
+@media (max-width: 768px)
+{
+    .navitem
+    {
+        display: none;
+    }
+}
+
 .navbutton
 {
     transition: 0.2s ease-in-out transform;
